--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
     <title>$ Shalom Santos $</title>
 </head>
 <body>
@@ -16,29 +17,37 @@
             <img src="./img/Icon.png" alt="Icon">
 
             <div class="nav">
-                <span class="btn span1"><strong>Menu</strong></span>
-                <span class="btn span2"><strong>Contato</strong></span>
-                <span class="btn span3"><strong>Skills</strong></span>
+                <span><strong>Menu</strong></span>
+                <span><strong>Contato</strong></span>
+                <span><strong>Skills</strong></span>
             </div>
         </div>
     </header>
 
     <main>
         <div class="apresentacao">
-            <a class="btn span4">já me conhece?</a>
+            <a class="btn">já me conhece?</a>
             <h1>
                 Olá Empreendedor, está precisando de alguem para estilizar sua empresa?
             </h1>
             <p>
                 Meu perfil do GitHub esta sempre com meus projetos recentes onde busco aprimorar minhas skils em
-                diversas tecnologias como <strong>javascript</strong>.
+                diversas tecnologias como <strong>Vue, Javascript, React</strong>.
             </p>
-            <a class="btn sign" href="/Portifólio/index2.html">Sign up</a>
+            <a class="btn" href="./index2.html">Onde me achar?</a>
         </div>
         <div class="apresenta">
             <img class="apresentacao1" src="./img/up.jpg" alt="">
         </div>
+        <div class="icons">
+            <a href="https://www.instagram.com/shalomsantoss/"><i class="fa-brands fa-instagram"></i></a>
+            <i class="fa-brands fa-whatsapp"></i>
+            <a href="https://www.facebook.com/shalom.pereira.dos.santos"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/shalom-santos-9891a11a6/"><i class="fa-brands fa-linkedin-in"></i></a>
+            
+        </div>
     </main>
+
 
     <script type="text/javascript" src="./js/vanilla-tilt.babel.min.js"></script>
     <script>
