--- a/index2.html
+++ b/index2.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Tela dois</title>
 </head>
-
-<style>
-    button{
-        margin: 1rem 0.5rem;
-    }
-    a{
-        text-decoration: none;
-        color: black;
-    }
-</style>
-
 <body>
     <div>
         <h1>
             ola mundo
         </h1>
-        <button><a href="/Portifólio/index.html">Voltar</a></button>
+        <a class="btn voltar" href="./index.html">Voltar</a>
     </div>
 </body>
 </html>
