--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Shalom pereira dos santos</a>
+            <a class="navbar-brand me-auto" href="#"><i class="fa-solid fa-s fs-1"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarsExample04">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
@@ -44,12 +43,13 @@
         <div class="row py-5">
             <div class="col-12 col-md-8">
                 <div class="col-12 col-md-8">
-                    <h1>Olá Empreendedor, está precisando de alguem para estilizar sua empresa?</h1>
+                    <h4>Eu sou</h4>
+                    <h1>Shalom Santos</h1>
                     <p>Meu perfil do GitHub esta sempre com meus projetos recentes onde busco aprimorar minhas skils em diversas tecnologias como <strong>SQL, PHP, javascript, C#</strong>.</p>
                 </div>
                 <a class="btn btn-dark btn-sm" href="./index2.html">Onde me achar?</a>
             </div>
-            <div class="col-4 d-flex align-items-center d-none d-md-block">
+            <div class="col-12 col-md-4 pt-4 pt-md-0 d-flex justify-content-center align-items-center">
                 <img class="rounded-circle myphoto" src="./img/up.jpg" alt="" width="250">
             </div>
         </div>
@@ -57,85 +57,55 @@
         <!-- TAG TITULO ==SKILLS== -->
         <div class="container position-relative d-flex flex-column">
             <hr>
-            <h1 class="position-absolute text-center bg-white" style="left: 50%; transform: translateX(-50%);">Skills</h1>
+            <h1 class="position-absolute top-50 start-50 translate-middle text-center bg-white">Skills</h1>
         </div>
 
         <div class="row py-5">
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-6 col-sm-4 col-md-2">
                 <div class="card">
-                    <i class="fa-solid fa-database mx-auto my-3" style="font-size: 5rem;"></i>
-                    <div class="card-body">
+                    <i class="fa-solid fa-database mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
                         <h5 class="card-title">Sql</h5>
-                        <p class="card-text">Mensagem relevante sobre o tema a cima, em breve terá.</p>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <buton type="button" class="btn btn-sm btn-outline-secondary">Edit</buton>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-6 col-sm-4 col-md-2">
                 <div class="card">
-                    <i class="fa-brands fa-php mx-auto my-3" style="font-size: 5rem;"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Php versão 8.1</h5>
-                        <p class="card-text">Mensagem relevante sobre o tema a cima, em breve terá.</p>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <buton type="button" class="btn btn-sm btn-outline-secondary">Edit</buton>
-                        </div>
+                    <i class="fa-brands fa-php mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
+                        <h5 class="card-title">Php 8.1+</h5>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-6 col-sm-4 col-md-2">
                 <div class="card">
-                    <i class="fa-brands fa-js mx-auto my-3" style="font-size: 5rem;"></i>
-                    <div class="card-body">
+                    <i class="fa-brands fa-js mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
                         <h5 class="card-title">Javascript</h5>
-                        <p class="card-text">Mensagem relevante sobre o tema a cima, em breve terá.</p>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <buton type="button" class="btn btn-sm btn-outline-secondary">Edit</buton>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-6 col-sm-4 col-md-2">
                 <div class="card">
-                    <i class="fa-brands fa-laravel mx-auto my-3" style="font-size: 5rem;"></i>
-                    <div class="card-body">
+                    <i class="fa-brands fa-laravel mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
                         <h5 class="card-title">Laravel</h5>
-                        <p class="card-text">Mensagem relevante sobre o tema a cima, em breve terá.</p>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <buton type="button" class="btn btn-sm btn-outline-secondary">Edit</buton>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-6 col-sm-4 col-md-2">
                 <div class="card">
-                    <i class="fa-brands fa-css3-alt mx-auto my-3" style="font-size: 5rem;"></i>
-                    <div class="card-body">
+                    <i class="fa-brands fa-css3-alt mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
                         <h5 class="card-title">Css 3</h5>
-                        <p class="card-text">Mensagem relevante sobre o tema a cima, em breve terá.</p>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <buton type="button" class="btn btn-sm btn-outline-secondary">Edit</buton>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-6 col-sm-4 col-md-2">
                 <div class="card">
-                    <i class="fa-brands fa-bootstrap mx-auto my-3" style="font-size: 5rem;"></i>
-                    <div class="card-body">
+                    <i class="fa-brands fa-bootstrap mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
                         <h5 class="card-title">Bootstrap</h5>
-                        <p class="card-text">Mensagem relevante sobre o tema a cima, em breve terá.</p>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <buton type="button" class="btn btn-sm btn-outline-secondary">Edit</buton>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -144,7 +114,7 @@
         <!-- TAG TITULO ==CONTATOS== -->
         <div class="container position-relative d-flex flex-column">
             <hr>
-            <h1 class="position-absolute text-center bg-white" style="left: 50%; transform: translateX(-50%);">Contatos</h1>
+            <h1 class="position-absolute top-50 start-50 translate-middle text-center bg-white">Contatos</h1>
         </div>
 
         <div class="row py-5">
