--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
-        <div class="container-fluid">
-            <a class="navbar-brand me-auto" href="#"><i class="fa-solid fa-s fs-1"></i></a>
+        <div class="container">
+            <a class="navbar-brand me-5" href="#"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,14 +40,14 @@
     </nav>
     <div class="container">
         <!-- CONTAINER ( APRESENTAÇÃO + IMAGEM ) -->
-        <div class="row py-5">
+        <div class="row py-3 py-sm-5">
             <div class="col-12 col-md-8">
                 <div class="col-12 col-md-8">
-                    <h4>Eu sou</h4>
-                    <h1>Shalom Santos</h1>
-                    <p>Meu perfil do GitHub esta sempre com meus projetos recentes onde busco aprimorar minhas skils em diversas tecnologias como <strong>SQL, PHP, javascript, C#</strong>.</p>
+                    <h5>Eu sou</h5>
+                    <h1 class="fw-bold">Shalom Santos</h1>
+                    <p class="fs-5">Meu perfil do GitHub esta sempre com meus projetos recentes onde busco aprimorar minhas skils em diversas tecnologias como <strong>SQL, PHP, javascript, C#</strong>.</p>
                 </div>
-                <a class="btn btn-dark btn-sm" href="./index2.html">Onde me achar?</a>
+                <a class="btn btn-dark btn-sm" href="#">Developer</a>
             </div>
             <div class="col-12 col-md-4 pt-4 pt-md-0 d-flex justify-content-center align-items-center">
                 <img class="rounded-circle myphoto" src="./img/up.jpg" alt="" width="250">
@@ -60,8 +60,8 @@
             <h1 class="position-absolute top-50 start-50 translate-middle text-center bg-white">Skills</h1>
         </div>
 
-        <div class="row py-5">
-            <div class="col-6 col-sm-4 col-md-2">
+        <div class="row py-3 py-sm-5">
+            <div class="col-6 col-sm-4 col-md-3">
                 <div class="card">
                     <i class="fa-solid fa-database mx-auto my-3 fs-1"></i>
                     <div class="card-body text-center text-sm-start">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
                 <div class="card">
                     <i class="fa-brands fa-php mx-auto my-3 fs-1"></i>
                     <div class="card-body text-center text-sm-start">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
                 <div class="card">
                     <i class="fa-brands fa-js mx-auto my-3 fs-1"></i>
                     <div class="card-body text-center text-sm-start">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
                 <div class="card">
                     <i class="fa-brands fa-laravel mx-auto my-3 fs-1"></i>
                     <div class="card-body text-center text-sm-start">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
                 <div class="card">
                     <i class="fa-brands fa-css3-alt mx-auto my-3 fs-1"></i>
                     <div class="card-body text-center text-sm-start">
@@ -101,12 +101,29 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
                 <div class="card">
                     <i class="fa-brands fa-bootstrap mx-auto my-3 fs-1"></i>
                     <div class="card-body text-center text-sm-start">
                         <h5 class="card-title">Bootstrap</h5>
                     </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <div class="card">
+                    <i class="fa-brands fa-vuejs mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
+                        <h5 class="card-title">Vue.js 2+</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-3">
+                <div class="card">
+                    <i class="fa-brands fa-docker mx-auto my-3 fs-1"></i>
+                    <div class="card-body text-center text-sm-start">
+                        <h5 class="card-title">Docker</h5>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -117,14 +134,14 @@
             <h1 class="position-absolute top-50 start-50 translate-middle text-center bg-white">Contatos</h1>
         </div>
 
-        <div class="row py-5">
-            <div class="col text-center" style="height: 250px;">
+        <div class="row py-3 py-sm-5">
+            <div class="col text-center">
                 Instagram
             </div>
-            <div class="col text-center" style="height: 250px;">
+            <div class="col text-center">
                 Facebook
             </div>
-            <div class="col text-center" style="height: 250px;">
+            <div class="col text-center">
                 GitHub
             </div>
         </div>
@@ -138,29 +155,6 @@
             </a>
             <span class="mb-3 mb-md-0 text-muted">&copy; 2024 Shalom pereira dos santos</span>
           </div>
-  
-          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3">
-                <a class="text-muted" href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </li>
-            <li class="ms-3">
-                <a class="text-muted" href="#">
-                    <i class="fa-brands fa-x-twitter"></i>
-                </a>
-            </li>
-            <li class="ms-3">
-                <a class="text-muted" href="#">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            </li>
-            <li class="ms-3">
-                <a class="text-muted" href="#">
-                    <i class="fa-brands fa-whatsapp"></i>
-                </a>
-            </li>
-          </ul>
         </footer>
     </footer>
 </body>
