--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contatos</a>
+                        <a class="nav-link" href="#">Contatos</a>
                     </li>
                 </ul>
             </div>
