update links redes sociais

--- a/index.html
+++ b/index.html
@@ -135,14 +135,15 @@
         </div>
 
         <div class="row py-3 py-sm-5">
-            <div class="col text-center">
-                Instagram
+            <div class="col-1 text-center">
+                <a class="text-dark text-decoration-none" href="https://github.com/shalomsantos">
+                    <i class="fa-brands fa-github fs-1"></i>GitHub
+                </a>
             </div>
-            <div class="col text-center">
-                Facebook
-            </div>
-            <div class="col text-center">
-                GitHub
+            <div class="col-1 text-center">
+                <a class="text-dark text-decoration-none" href="https://www.instagram.com/shalomsantoss/">
+                    <i class="fa-brands fa-instagram fs-1"></i>Instagram
+                </a>
             </div>
         </div>
     </main>
