--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="btn btn-dark btn-sm" href="#">Developer</a>
             </div>
             <div class="col-12 col-md-4 pt-4 pt-md-0 d-flex justify-content-center align-items-center">
-                <img class="rounded-circle myphoto" src="./img/up.jpg" alt="" width="250">
+                <img class="myphoto" src="./img/up.jpg" alt="" width="250">
             </div>
         </div>
 
@@ -133,18 +133,15 @@
             <hr>
             <h1 class="position-absolute top-50 start-50 translate-middle text-center bg-white">Contatos</h1>
         </div>
-
-        <div class="row py-3 py-sm-5">
-            <div class="col-1 text-center">
-                <a class="text-dark text-decoration-none" href="https://github.com/shalomsantos">
-                    <i class="fa-brands fa-github fs-1"></i>GitHub
-                </a>
-            </div>
-            <div class="col-1 text-center">
-                <a class="text-dark text-decoration-none" href="https://www.instagram.com/shalomsantoss/">
-                    <i class="fa-brands fa-instagram fs-1"></i>Instagram
-                </a>
-            </div>
+        <div class="d-flex align-items-center gap-3 flex-column flex-sm-row py-3">
+            <a class="btn btn-outline-dark d-flex"  href="https://github.com/shalomsantos">
+                <i class="fa-brands fa-github fs-1 me-2"></i>
+                <p class="my-auto">GitHub</p>
+            </a>
+            <a class="btn btn-outline-dark d-flex" href="https://www.instagram.com/shalomsantoss/">
+                <i class="fa-brands fa-instagram fs-1 me-2"></i>
+                <p class="my-auto">Instagram</p>
+            </a>
         </div>
     </main>
 
