--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="btn btn-dark btn-sm" href="#">Developer</a>
             </div>
             <div class="col-12 col-md-4 pt-4 pt-md-0 d-flex justify-content-center align-items-center">
-                <img class="myphoto" src="./img/up.jpg" alt="" width="250">
+                <img class="myphoto" src="./img/up.png" alt="" width="250">
             </div>
         </div>
 
