--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
-        <div class="container">
+        <div class="container bg-dark z-3">
             <a class="navbar-brand me-5" href="#"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarsExample04">
+            <div class="collapse navbar-collapse bg-dark z-3" id="navbarsExample04">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" onClick="selectPage('home')">Home</a>
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <main class="container">
-        <section class="apresentacao h-100">
+        <div class="apresentacao">
             <div class="row py-3 py-sm-5">
                 <div class="col-12 col-md-8">
                     <div class="col-12 col-md-8">
@@ -56,9 +56,9 @@
                     <img class="myphoto" src="./img/up.png" alt="" width="250">
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="skills h-100">
+        <section class="skills">
             <div class="container d-flex flex-column">
                 <hr>
                 <h1 class="text-center bg-white px-3">Skills</h1>
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section class="repositorios h-100">
+        <section class="repositorios">
             <div class="container d-flex flex-column">
                 <hr>
                 <h1 class="text-center bg-white px-3">Repositórios</h1>
@@ -188,7 +188,7 @@
             </div>
         </section>
 
-        <section class="contatos h-100">
+        <section class="contatos">
             <div class="container d-flex flex-column">
                 <hr>
                 <h1 class="text-center bg-white px-3">Contatos</h1>
@@ -205,7 +205,7 @@
             </div>
         </section>
     </main>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top bg-dark">
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
