--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse bg-dark z-3" id="navbarsExample04">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="/" class="nav-link active">Home</a>
+                        <a href="/" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="/skills.html" class="nav-link">Skills</a>
@@ -35,28 +35,25 @@
                         <a href="/repos.html" class="nav-link">Repositórios</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/contact.html" class="nav-link">Contatos</a>
+                        <a href="/contact.html" class="nav-link active">Contatos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="container">
-        <div class="apresentacao">
-            <div class="row py-3 py-sm-5">
-                <div class="col-12 col-md-8">
-                    <div class="col-12 col-md-8">
-                        <h5>I'm software developer full-stack</h5>
-                        <h1 class="fw-bold">Shalom Santos</h1>
-                        <p class="fs-5">Acostumado a desenvolver soluções de software, seja na interface de usuário, seja na mudança ou criação de regras de negócios para uma aplicação web.</p>
-                    </div>
-                    <a class="btn btn-dark btn-sm" href="#">Developer</a>
-                </div>
-                <div class="col-12 col-md-4 pt-4 pt-md-0 d-flex justify-content-center align-items-center">
-                    <img class="myphoto" src="./img/up.png" alt="" width="250">
-                </div>
+        <section class="contatos">
+            <div class="d-flex align-items-center gap-3 flex-column flex-sm-row py-3">
+                <a class="btn btn-outline-dark d-flex"  href="https://github.com/shalomsantos">
+                    <i class="fa-brands fa-github fs-1 me-2"></i>
+                    <p class="my-auto">GitHub</p>
+                </a>
+                <a class="btn btn-outline-dark d-flex" href="https://www.instagram.com/shalomsantoss/">
+                    <i class="fa-brands fa-instagram fs-1 me-2"></i>
+                    <p class="my-auto">Instagram</p>
+                </a>
             </div>
-        </div>
+        </section>
     </main>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top bg-dark">
         <div class="col-md-4 d-flex align-items-center">
