melhoria de interface

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
         <div class="container bg-dark z-3">
-            <a class="navbar-brand me-5" href="#"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
+            <a class="navbar-brand me-5" href="/"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,19 +41,17 @@
             </div>
         </div>
     </nav>
-    <main class="container">
+    <main class="container d-flex align-items-center">
         <div class="apresentacao">
             <div class="row py-3 py-sm-5">
-                <div class="col-12 col-md-8">
-                    <div class="col-12 col-md-8">
-                        <h5>I'm software developer full-stack</h5>
-                        <h1 class="fw-bold">Shalom Santos</h1>
-                        <p class="fs-5">Acostumado a desenvolver soluções de software, seja na interface de usuário, seja na mudança ou criação de regras de negócios para uma aplicação web.</p>
-                    </div>
+                <div class="col-12 col-md-6">
+                    <h5>I'm software developer full-stack</h5>
+                    <h1 class="fw-bold">Shalom Santos</h1>
+                    <p class="fs-5">Acostumado a desenvolver soluções de software, seja na interface de usuário, seja na mudança ou criação de regras de negócios para uma aplicação web.</p>
                     <a class="btn btn-dark btn-sm" href="#">Developer</a>
                 </div>
-                <div class="col-12 col-md-4 pt-4 pt-md-0 d-flex justify-content-center align-items-center">
-                    <img class="myphoto" src="./img/up.png" alt="" width="250">
+                <div class="col-12 col-md-6 d-flex justify-content-center">
+                    <img class="myphoto" src="./img/up.png" alt="" width="400">
                 </div>
             </div>
         </div>
