--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
         <div class="container bg-dark z-3">
-            <a class="navbar-brand me-5" href="#"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
+            <a class="navbar-brand me-5" href="/"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,24 +44,24 @@
     <main class="container">
         <section class="skills">
             <div class="row py-3 py-sm-5">
-                <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-solid fa-database mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Sql</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-php mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Php 8.1+</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-js mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Javascript</h5>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-laravel mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Laravel</h5>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-css3-alt mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Css 3</h5>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-bootstrap mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Bootstrap</h5>
@@ -93,15 +93,15 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-vuejs mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Vue.js 2+</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <div class="card">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
                         <i class="fa-brands fa-docker mx-auto my-3 fs-1"></i>
                         <div class="card-body text-center text-sm-start">
                             <h5 class="card-title">Docker</h5>
