--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
         <div class="container bg-dark z-3">
-            <a class="navbar-brand me-5" href="#"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
+            <a class="navbar-brand me-5" href="/"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,6 +51,10 @@
                 <a class="btn btn-outline-dark d-flex" href="https://www.instagram.com/shalomsantoss/">
                     <i class="fa-brands fa-instagram fs-1 me-2"></i>
                     <p class="my-auto">Instagram</p>
+                </a>
+                <a class="btn btn-outline-dark d-flex" href="https://www.linkedin.com/in/shalom-santos-9891a11a6/">
+                    <i class="fa-brands fa-linkedin fs-1 me-2"></i>
+                    <p class="my-auto">Linkedin</p>
                 </a>
             </div>
         </section>
