--- a/index.html
+++ b/index.html
@@ -19,30 +19,34 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Fourth navbar example">
         <div class="container bg-dark z-3">
-            <a class="navbar-brand me-5" href="/"><i class="fa-solid fa-s fs-1 me-1"></i><i class="fa-solid fa-s fs-1"></i></a>
+            <a class="navbar-brand me-5" href="/">
+                Desenvolvedor Full-stack
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse bg-dark z-3" id="navbarsExample04">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="/" class="nav-link active">Home</a>
+                        <a class="nav-link active">Quem sou eu?</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/skills.html" class="nav-link">Skills</a>
+                        <a class="nav-link">Estou acostumado</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/repos.html" class="nav-link">Repositórios</a>
+                        <a class="nav-link">Meus projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/contact.html" class="nav-link">Contatos</a>
+                        <a class="nav-link">Fale comigo</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="container d-flex align-items-center">
-        <div class="apresentacao">
+
+    <main class="container">
+        <!-- APRESENTACAO -->
+        <section class="apresentacao">
             <div class="row py-3 py-sm-5">
                 <div class="col-12 col-md-6">
                     <h5>I'm software developer full-stack</h5>
@@ -54,8 +58,151 @@
                     <img class="myphoto" src="./img/up.png" alt="" width="400">
                 </div>
             </div>
-        </div>
+        </section>
+        <!-- SKILLS -->
+        <h1 class="pt-3">Estou acostumado</h1>
+        <section class="skills">
+            <div class="row py-3 py-sm-5">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-solid fa-database mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Sql</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-php mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Php 8.1+</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-js mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Javascript</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-laravel mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Laravel</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-css3-alt mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Css 3</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-bootstrap mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Bootstrap</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-vuejs mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Vue.js 2+</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <div class="card shadow-sm border border-3">
+                        <i class="fa-brands fa-docker mx-auto my-3 fs-1"></i>
+                        <div class="card-body text-center text-sm-start">
+                            <h5 class="card-title">Docker</h5>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- REPOSITORIOS -->
+        <h1 class="pt-3">Meus projetos</h1>
+        <section class="repositorios">
+            <div class="row py-3 py-sm-5">
+                <div class="col-12 col-sm-6">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">E-commerce</h5>
+                        <p class="card-text">Meu primeiro projeto usando php como framework laravel, nesse desafio consegui definir bem a organização das pastas e fazer o bom uso de cada uma.</p>
+                        <div class="row">
+                            <div class="col-12 col-sm-6 position-relative repos">
+                                <img src="./img/print-1.png" alt="" class="w-100 rounded-3 border">
+                                <div class="link position-absolute rounded-3">
+                                    <a href="https://github.com/shalomsantos/dockerLaravel" class="text-white text-center repos-link">
+                                        <i class="fa-brands fa-laravel fs-1"></i>
+                                        <p class="text-capitalize">dockerLaravel</p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <p class="fw-bold mb-0">Laravel 10</p>
+                                <p class="fw-bold mb-0">Docker</p>
+                                <p class="fw-bold mb-0">Bootstrap</p>
+                                <p class="fw-bold mb-0">Js lib's</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Apresentação de dados consumidos via Api</h5>
+                        <p class="card-text">Aqui coloquei a prova minhas habilidades de consumir um serviço externo e apresenta-lo em tela de forma elegante e responsiva.</p>
+                        <div class="row">
+                            <div class="col-12 col-sm-6 position-relative repos">
+                                <img src="./img/pokemonapi.png" alt="" class="w-100 rounded-3 border">
+                                <div class="link position-absolute rounded-3">
+                                    <a href="https://github.com/shalomsantos/PokemonApi" class="text-white text-center repos-link">
+                                        <i class="fa-solid fa-arrow-up-right-from-square fs-1"></i>
+                                        <p class="text-capitalize">PokemonApi</p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <p class="fw-bold mb-0">Html</p>
+                                <p class="fw-bold mb-0">Css</p>
+                                <p class="fw-bold mb-0">Js</p>
+                                <p class="fw-bold mb-0">Api</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="https://github.com/shalomsantos">Ver mais...</a>
+            </div>
+        </section>
+        <!-- CONTATOS -->
+        <h1 class="pt-3">Fale comigo</h1>
+        <section class="contatos">
+            <div class="d-flex justify-content-center flex-column flex-sm-row gap-3 py-3">
+                <a class="btn btn-outline-dark d-flex" style="width: fit-content;" href="https://github.com/shalomsantos">
+                    <i class="fa-brands fa-github fs-1 me-2"></i>
+                    <p class="my-auto">GitHub</p>
+                </a>
+                <a class="btn btn-outline-dark d-flex" style="width: fit-content;" href="https://www.instagram.com/shalomsantoss/">
+                    <i class="fa-brands fa-instagram fs-1 me-2"></i>
+                    <p class="my-auto">Instagram</p>
+                </a>
+                <a class="btn btn-outline-dark d-flex" style="width: fit-content;" href="https://www.linkedin.com/in/shalom-santos-9891a11a6/">
+                    <i class="fa-brands fa-linkedin fs-1 me-2"></i>
+                    <p class="my-auto">Linkedin</p>
+                </a>
+            </div>
+        </section>
     </main>
+
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top bg-dark">
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
